<?xml version="1.0"?>
<package format="2">
  <name>obstacles_msgs</name>
  <version>0.1.2</version>
  <description>Message definitions for obstacle publishing</description>

  <maintainer email="christoph.roesmann@tu-dortmund.de">Christoph Rösmann</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
